# demeter

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  frontend-package.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  CompareMode.css  DialogContext.tsx  constants.ts  index.css  index.tsx
frontend/src/components/: ArtifactsPanel.tsx  CompareMode.tsx  Icons.tsx  IngestionModal.tsx  MarkdownComponents.tsx  Message.tsx  Modals.tsx  PromptsEditorModal.tsx  RagSourcesBadge.tsx
frontend/src/hooks/: index.ts
frontend/src/utils/: artifacts.ts  docx.ts  mermaid-sanitizer.ts  text.ts
src-tauri/: Cargo.toml  build.rs  prompts.yml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/installer/: license.html  nsis-custom.nsh
src-tauri/src/: api.rs  config.rs  db.rs  extract.rs  lib.rs  main.rs  mcp.rs  models.rs  rag.rs  spaces.rs  web_search.rs
