[package]
name = "demeter"
version = "2.0.1"
description = "Demeter – Assistant RH"
authors = ["Pierre Couget <ktulu.analog@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "demeter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "demeter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# HTTP server
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls", "charset", "http2"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
dotenvy = "0.15"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
regex = "1"

# Document parsing
lopdf = "0.34"
zip = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
encoding_rs = "0.8"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
strip = true
